# trading_ai

./: .gitignore  ABSOLUTE_DEBUG.txt  README.md  install_tradingai_discord_service.ps1  migrate_core.py  migrate_project.py  pyproject.toml  run_discord_bot.bat  set_env.bat  symbols_list.txt
docs/: 01_executive_overview.md  02_system_architecture.md  03_directory_structure.md  04_core_components.md  05_crewai_layer.md  06_discord_integration.md  07_ctrader_integration.md  08_ny_session_engine.md  09_knowledge_system.md  10_system_execution.md  11_developer_guide.md  12_investor_perspective.md  13_roadmap.md
knowledge_base/advisors/: range_breakout_ea.py
knowledge_base/code/: backtester.py  dashboard_crewai.py  dashboard_reports.py  main.py  statistics.py  test_full_pipeline.py  webhook_server.py
knowledge_base/reports/: report_2025-11-09_18-47-40.txt
knowledge_base/research/: планы по проекту.txt
reports/: full_chain_report.txt  full_market_report_2025-11-08_02-03-36.html  full_market_report_2025-11-08_02-21-11.html  ny_session_crew_log.jsonl  strategy_comparison_2025-11-08_00-23-21.html  strategy_comparison_2025-11-08_00-34-08.html
src/: debug_bot_permissions.py  debug_channels.py  last_report.txt  manual_dispatch_test.py  run_ctrader_market_agent.py  run_discord_test.py  run_market_engine.py  test_discord.py
src/reports/: 2025-11-06_11-20-59.txt  2025-11-06_13-58-04.txt  2025-11-09_14-41-09.txt  2025-11-09_15-04-20.txt  2025-11-09_15-53-01.txt  2025-11-09_16-02-16.txt  ny_session_crew_log.jsonl
src/trading_ai/: __init__.py  (+1 more)
utils/: loader_env.py
(+66 files in other folders)
