[project]
name = "trading_ai"
version = "0.1.0"
description = "trading_ai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.3.0"
]

[project.scripts]
trading_ai = "trading_ai.main:run"
run_crew = "trading_ai.main:run"
train = "trading_ai.main:train"
replay = "trading_ai.main:replay"
test = "trading_ai.main:test"
run_with_trigger = "trading_ai.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
